(fix) expand/collapse button is more visible

--- a/app/globals.css
+++ b/app/globals.css
@@ -263,6 +263,39 @@ a {
   transition: 0.2s ease-in-out;
 }
 
+
+
+
+
+
+
+
+
+
+.suttle-button {
+  color: #f89292;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  height: 24px;
+  max-width: 100px;
+  margin-right: 8px;
+}
+.suttle-button:hover {
+  cursor: pointer;
+  background-color: #f1f1f1;
+  transition: 0.2s ease-in-out;
+}
+.suttle-button:active {
+  background-color: #f5f5f5;
+  transition: 0.2s ease-in-out;
+}
+
+
+
+
+
+
 .navbar__button--disabled {
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -640,9 +673,6 @@ input {
 /*______________________________________  */
 
 /*______________________________________ MODS */
-.--reverse-order {
-  order: -1;
-}
 
 .--centered-text {
   text-align: center;
